overflow fix body

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ html {
 
 body {
   background-color: #F8F8F8;
+  overflow-x: hidden;
 }
 
 .site-loader-container {
